organizing the 'cart' context files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@layouts/*": ["./src/layouts/*"],
       "@pages/*": ["./src/pages/*"],
       "@styles/*": ["./src/styles/*"],
+      "@contexts/*": ["./src/contexts/*"],
     }
   },
   "include": ["src"],
